version/0.12/_sources/api/solver/_autosummary/settings/report_1.rst.txt
:orphan:

.. _report_1:

report
======

.. currentmodule:: ansys.fluent.core.solver.settings_231.report_1

.. autoclass:: report
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

==========================================================   =====================================

Child                                                                                      Summary

==========================================================   =====================================
:ref:`simulation_reports <simulation_reports>`                         'simulation_reports' child.

:ref:`discrete_phase <discrete_phase_1>`                                   'discrete_phase' child.

:ref:`fluxes <fluxes>`                                                             'fluxes' child.

:ref:`flow <flow>`                                                                   'flow' child.

:ref:`modified_setting_options <modified_setting_options>`       'modified_setting_options' child.

:ref:`population_balance <population_balance>`                         'population_balance' child.

:ref:`heat_exchange <heat_exchange>`                                        'heat_exchange' child.

:ref:`system <system>`                                                             'system' child.

:ref:`print_write_histogram <print_write_histogram>`                'print_write_histogram' child.

==========================================================   =====================================

.. rubric:: Commands

==========================================================   =========================================================================

Command                                                                                                                        Summary

==========================================================   =========================================================================
:ref:`aero_optical_distortions <aero_optical_distortions>`                                                         Optics report menu.

:ref:`forces <forces>`                                                                                               'forces' command.

:ref:`mphase_summary <mphase_summary>`                                                         Multiphase Summary and Recommendations.

:ref:`particle_summary <particle_summary>`                                             Print summary report for all current particles.

:ref:`path_line_summary <path_line_summary>`                                                           Print path-line-summary report.

:ref:`projected_surface_area <projected_surface_area>`           Print total area of the projection of a group of surfaces to a plane.

:ref:`summary <summary_1>`                                                                                       Print report summary.

:ref:`surface_integrals <surface_integrals>`                                                              'surface_integrals' command.

:ref:`volume_integrals <volume_integrals>`                                                                 'volume_integrals' command.

==========================================================   =========================================================================

.. rubric:: Included in:

========================   ====================

Parent                                  Summary

========================   ====================
:ref:`root <root>`               'root' object.

:ref:`results <results>`       'results' child.

========================   ====================

