version/0.19/_sources/api/solver/_autosummary/settings/report_1.rst.txt
:orphan:

.. _report_1:

report
======

.. autoclass:: ansys.fluent.core.solver.settings_241.report_1.report
    :show-inheritance:

.. rubric:: Attributes

==========================================================   =====================================

Attribute                                                                                  Summary

==========================================================   =====================================
:ref:`simulation_reports <simulation_reports>`                         'simulation_reports' child.

:ref:`discrete_phase <discrete_phase_1>`                                   'discrete_phase' child.

:ref:`fluxes <fluxes>`                                                             'fluxes' child.

:ref:`flow <flow>`                                                                   'flow' child.

:ref:`modified_setting_options <modified_setting_options>`       'modified_setting_options' child.

:ref:`population_balance <population_balance>`                         'population_balance' child.

:ref:`heat_exchanger <heat_exchanger_1>`                            Enter the heat exchanger menu.

:ref:`system <system>`                                                                System menu.

:ref:`surface_integrals <surface_integrals>`                            'surface_integrals' child.

:ref:`volume_integrals <volume_integrals>`                               'volume_integrals' child.

==========================================================   =====================================

.. rubric:: Methods

==========================================================   =========================================================================

Method                                                                                                                         Summary

==========================================================   =========================================================================
:ref:`aero_optical_distortions <aero_optical_distortions>`                                                         Optics report menu.

:ref:`forces <forces>`                                                                                               'forces' command.

:ref:`multiphase_summary <multiphase_summary>`                                                 Multiphase Summary and Recommendations.

:ref:`particle_summary <particle_summary>`                                             Print summary report for all current particles.

:ref:`pathline_summary <pathline_summary>`                                                             Print path-line-summary report.

:ref:`projected_surface_area <projected_surface_area>`           Print total area of the projection of a group of surfaces to a plane.

:ref:`summary <summary_1>`                                                                                       Print report summary.

:ref:`vbm <vbm>`                                                                                                        'vbm' command.

==========================================================   =========================================================================

.. rubric:: Included in:

========================   ====================

Parent                                  Summary

========================   ====================
:ref:`results <results>`       'results' child.

========================   ====================

